--- a/categories-list.xhtml
+++ b/categories-list.xhtml
@@ -25,33 +25,47 @@
            type="text/javascript"></script>
 </head> 
 <body>
-   <h1>Organizations by Category</h1>
-	<table><tbody><tr><td width="100%" style="vertical-align:top">
-   <div ex:role="viewPanel">
-       <div ex:role="exhibit-view"
-           ex:viewClass="Exhibit.TabularView"
-           ex:columns=".label"
-           ex:columnLabels="Organization"
-           ex:columnFormats="list"
-           ex:sortColumn="0"
-           ex:sortAscending="true">
-		               <table ex:role="lens" class="orglist">
-		                   <tr>
-		                      <td>
-		                           <span><a ex:href-content=".url"><div ex:content=".label"></div></a></span>
-													</td>
-		                   </tr>
-		               </table>
-       </div>
+    <div class="container">
+        <div class="page-header">
+            <h1>Organizations by Category</h1>
+        </div>
+        <div class="row">
+            <div class="col-sm-12">
+                <table class="table table-striped table-hover">
+                    <tbody>
+                        <tr>
+                            <td>
+                                <div ex:role="viewPanel">
+                                   <div ex:role="exhibit-view" ex:viewClass="Exhibit.TabularView" ex:columns=".label" ex:columnLabels="Organization"
+                                       ex:columnFormats="list" ex:sortColumn="0" ex:sortAscending="true">
+                                        <table ex:role="lens" class="orglist">
+                                            <tr>
+                                                <td>
+                                                    <span>
+                                                        <a ex:href-content=".url">
+                                                            <div ex:content=".label"></div>
+                                                        </a>
+                                                    </span>
+                                                </td>
+                                            </tr>
+                                        </table>
+                                   </div>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="aside">
+                                   <div><a href="directory-list.rq?view">List all entries</a></div>
+                                   <div ex:role="facet" ex:facetClass="TextSearch"></div>
+                                   <div ex:role="facet" ex:expression=".category" ex:facetLabel="Category"></div>
+                                   <div ex:role="facet" ex:expression=".country" ex:facetLabel="Country"></div>
+                                   <div ex:role="facet" ex:expression=".orgtype" ex:facetLabel="Organization Type"></div>
+                               </div>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
     </div>
-	</td><td style="vertical-align:top">
-   <div class="aside">
-       <div><a href="directory-list.rq?view">List all entries</a></div>
-       <div ex:role="facet" ex:facetClass="TextSearch"></div>
-       <div ex:role="facet" ex:expression=".category" ex:facetLabel="Category"></div>
-       <div ex:role="facet" ex:expression=".country" ex:facetLabel="Country"></div>
-       <div ex:role="facet" ex:expression=".orgtype" ex:facetLabel="Organization Type"></div>
-   </div>
-	</td></tr></tbody></table>
 </body>
 </html>
