--- a/organization-create.xhtml
+++ b/organization-create.xhtml
@@ -23,70 +23,55 @@
 	</script>
 </head>
 <body>
-    <h1>New Organization</h1>
-	<form id="form" typeof="vcard:Organization vcard:VCard gr:BusinessEntity"
-            method="POST" action="" enctype="application/rdf+xml"
-            onsubmit="updateLabel();return calli.saveResourceAs(event, calli.slugify($('#label').val()))">
-		<div class="control-group">
-    		<label for="name" class="control-label">Legal Name</label>
-			<div class="controls">
-				<input id="legal" type="text" autofocus="autofocus" required="required" value="{gr:legalName}" />
-            	<input id="label" type="hidden" value="{rdfs:label}" />
-        		<input id="fn" type="hidden" value="{vcard:fn}" />
-        		<input id="name" type="hidden" value="{vcard:organization-name}" />
-			</div>
-		</div>
-
-		<div class="control-group">
-			<label for="orgtype" class="control-label">Type of Organization</label>
-            <div class="controls">
-    			<select id="orgtype" rel="directory:isOrganizationType">
-    				<option selected="selected" about="?orgtype" rev="calli:hasComponent" resource="type-of-organization/" property="skos:prefLabel" />
-    			</select>
-            </div>
-		</div>
-
-		<div class="control-group">
-			<label for="url" class="control-label">Web site URL</label>
-            <div class="controls">
-			    <input id="url" type="url" required="required" value="{vcard:url}" style="width:52ex" />
-            </div>
-		</div>
-		<div class="hbox">
-			<div class="control-group">
-				<label for="email" class="control-label">Email</label>
-                <div class="controls">
-				    <input id="email" type="email" value="{vcard:workEmail}" title="Preferred e-mail address for contact" />
+    <div class="container">
+        <div class="page-header">
+            <h1>New Organization</h1>
+        </div>
+        <form id="form" typeof="vcard:Organization vcard:VCard gr:BusinessEntity" method="POST" action="" enctype="application/rdf+xml" onsubmit="updateLabel();return calli.saveResourceAs(event, calli.slugify($('#label').val()))">
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="form-group">
+                        <h4 for="name">Legal Name</h4>
+                        <input id="legal" type="text" autofocus="autofocus" required="required" value="{gr:legalName}" class="form-control" />
+                        <input id="label" type="hidden" value="{rdfs:label}" class="form-control" />
+                        <input id="fn" type="hidden" value="{vcard:fn}" class="form-control" />
+                        <input id="name" type="hidden" value="{vcard:organization-name}" class="form-control" />
+                    </div>
+                    <div class="form-group">
+                        <h4 for="orgtype">Type of Organization</h4>
+                		<select id="orgtype" rel="directory:isOrganizationType" class="form-control">
+            				<option selected="selected" about="?orgtype" rev="calli:hasComponent" resource="type-of-organization/" property="skos:prefLabel" />
+            			</select>
+                    </div>
+                    <div class="form-group">
+                        <h4 for="url">Web site URL</h4>
+            		    <input id="url" type="url" required="required" value="{vcard:url}" class="form-control" />
+                    </div>
+                    <div class="form-group">
+                        <h4 for="email">Email</h4>
+                        <input id="email" type="email" value="{vcard:workEmail}" title="Preferred e-mail address for contact" class="form-control" />
+                    </div>
+                    <div class="form-group">
+                        <h4 for="tel">Telephone</h4>
+                        <input id="tel" type="text" placeholder="+country code-area-number" value="{vcard:workTel}" class="form-control" />
+                    </div>
                 </div>
-			</div>
-			<div class="control-group">
-				<label for="tel" class="control-label">Telephone</label>
-                <div class="controls">
-				    <input id="tel" type="text" placeholder="+country code-area-number" value="{vcard:workTel}" />
-                </div>
-			</div>
-		</div>
-        <div class="control-group">
-    		<label for="adr" class="control-label">Address <a href="javascript:void(0)" title="Another Address"
-                onclick="return calli.addResource(event,'#adr')" class="ui-icon ui-icon-plus" /></label>
-    		<div id="adr" rel="vcard:adr" class="vbox controls">
-    			<div typeof="vcard:Address">
-    				<div class="hbox">
-    					<div class="vbox">
-    						<input type="text" placeholder="street address" value="{vcard:street-address}" />
-    						<input type="text" placeholder="extended address" value="{vcard:extended-address}" />
-    						<input type="text" placeholder="po box" value="{vcard:post-office-box}" />
-    					</div>
-    					<div class="vbox">
-    						<input type="text" placeholder="city" value="{vcard:locality}" />
-    						<input type="text" placeholder="state or province" value="{vcard:region}" />
-    						<input type="text" placeholder="postal code" value="{vcard:postal-code}" />
-    						<input type="hidden" value="{vcard:country-name}" />
-    					</div>
-    				</div>
-    				<div>
-    					<select onchange="$(this).parent().parent().children().children('div').find(':hidden').val(value).change()">
-    						<option value="{vcard:country-name}">{vcard:country-name}</option>
+                <div class="col-sm-4">
+                    <div class="form-group">
+                        <h4 for="adr">
+                            Address <a href="javascript:void(0)" title="Another Address" onclick="return calli.addResource(event,'#adr')"><span class="glyphicon glyphicon-plus" /></a>
+                        </h4>
+                        <div id="adr" rel="vcard:adr">
+                            <div typeof="vcard:Address">
+                                <input type="text" placeholder="street address" value="{vcard:street-address}" class="form-control" />
+                                <input type="text" placeholder="extended address" value="{vcard:extended-address}" class="form-control" />
+                                <input type="text" placeholder="po box" value="{vcard:post-office-box}" class="form-control" />
+                                <input type="text" placeholder="city" value="{vcard:locality}" class="form-control" />
+                                <input type="text" placeholder="state or province" value="{vcard:region}" class="form-control" />
+                                <input type="text" placeholder="postal code" value="{vcard:postal-code}" class="form-control" />
+                                <input type="hidden" value="{vcard:country-name}" />
+                                <select onchange="$(this).parent().parent().children().children('div').find(':hidden').val(value).change()" class="form-control">
+<option value="{vcard:country-name}">{vcard:country-name}</option>
 <option>Afghanistan</option>
 <option>Åland Islands</option>
 <option>Albania</option>
@@ -335,16 +320,20 @@
 <option>Western Sahara</option>
 <option>Yemen</option>
 <option>Zambia</option>
-<option>Zimbabwe</option>
-    					</select>
-    				</div>
-    				<a href="javascript:void(0)" title="Remove This Address" onclick="return calli.removeResource(event)" class="ui-icon ui-icon-close" />
+<option>Zimbabwe</option>     
+                                </select>
+                                <a href="javascript:void(0)" title="Remove This Address" onclick="return calli.removeResource(event)"><span class="glyphicon glyphicon-remove" /></a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-			</div>
-		</div>
-        <div class="form-actions">
-		    <button id="create" type="submit" class="btn btn-success">Create</button>
-        </div>
-	</form>
+            </div>
+            <div class="row">
+                <div class="col-sm-6 form-group">
+                    <button id="create" type="submit" class="btn btn-success">Create</button>
+                </div>
+            </div>
+        </form>
+    </div>
 </body>
 </html>
