--- a/unit-create.xhtml
+++ b/unit-create.xhtml
@@ -36,49 +36,44 @@
 	</script>
 </head>
 <body>
-    <h1>New Organization</h1>
-	<form id="form" typeof="vcard:Organization vcard:VCard gr:BusinessEntity"
-            method="POST" action="" enctype="application/rdf+xml"
-            onsubmit="updateLabel();return calli.saveResourceAs(event, calli.slugify($('#unit').val()))">
-		<div class="control-group">
-			<label for="unit" class="control-label">Business Unit</label>
-            <div class="controls">
-    			<input id="unit" type="text" autofocus="autofocus" value="{vcard:organization-unit}" required="required"
-                    title="The name of a unit, division, department, or group within an organization" />
-    			<input id="legal" type="hidden" value="{gr:legalName}" />
-            	<input id="label" type="hidden" value="{rdfs:label}" />
-        		<input id="fn" type="hidden" value="{vcard:fn}" />
-        		<input id="name" type="hidden" value="{vcard:organization-name}" />
-                <span id="orgtype" rel="directory:isOrganizationType">
-                    <span about="?orgtype" rev="calli:hasComponent" resource="type-of-organization/" />
-                </span>
-            </div>
-		</div>
-
-		<div class="control-group">
-			<label for="url" class="control-label">Web site URL</label>
-            <div class="controls">
-			    <input id="url" type="url" required="required" value="{vcard:url}" style="width:52ex" />
-            </div>
-		</div>
-		<div class="hbox">
-			<div class="control-group">
-				<label for="email" class="control-label">Email</label>
-                <div class="controls">
-				    <input id="email" type="email" value="{vcard:workEmail}" title="Preferred e-mail address for contact" />
-                </div>
-			</div>
-			<div class="control-group">
-				<label for="tel" class="control-label">Telephone</label>
-                <div class="controls">
-				    <input type="text" id="tel" placeholder="+country code-area-number" value="{vcard:workTel}" />
-                </div>
-			</div>
-		</div>
-
-        <div class="form-actions">
-		    <button id="submit" type="submit" class="btn btn-primary">Create</button>
+    <div class="container">
+        <div class="page-header">
+            <h1>New Organization</h1>
         </div>
-	</form>
+        <form id="form" typeof="vcard:Organization vcard:VCard gr:BusinessEntity" method="POST" action="" enctype="application/rdf+xml" onsubmit="updateLabel();return calli.saveResourceAs(event, calli.slugify($('#unit').val()))">
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="form-group">
+                        <h4>Business Unit</h4>
+                        <input id="unit" type="text" autofocus="autofocus" value="{vcard:organization-unit}" required="required" title="The name of a unit, division, department, or group within an organization" />
+                        <input id="legal" type="hidden" value="{gr:legalName}" />
+                        <input id="label" type="hidden" value="{rdfs:label}" />
+                        <input id="fn" type="hidden" value="{vcard:fn}" />
+                        <input id="name" type="hidden" value="{vcard:organization-name}" />
+                        <span id="orgtype" rel="directory:isOrganizationType">
+                            <span about="?orgtype" rev="calli:hasComponent" resource="type-of-organization/" />
+                        </span>
+                    </div>
+                    <div class="form-group">
+                        <label for="url">Web site URL</label>
+                        <input id="url" type="url" required="required" value="{vcard:url}" class="form-control" />
+                    </div>
+                    <div class="form-group">
+                        <label for="email" class="control-label">Email</label>
+                        <input id="email" type="email" value="{vcard:workEmail}" title="Preferred e-mail address for contact" class="form-control" />
+                    </div>
+                    <div class="form-group">
+                        <label for="tel" class="control-label">Telephone</label>
+                        <input type="text" id="tel" placeholder="+country code-area-number" value="{vcard:workTel}" class="form-control" />
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12">
+                    <button id="submit" type="submit" class="btn btn-primary">Create</button>
+                </div>
+            </div>
+        </form>
+    </div>
 </body>
 </html>
