Added class to input element

--- a/unit-create.xhtml
+++ b/unit-create.xhtml
@@ -45,7 +45,7 @@
                 <div class="col-sm-4">
                     <div class="form-group">
                         <h4>Business Unit</h4>
-                        <input id="unit" type="text" autofocus="autofocus" value="{vcard:organization-unit}" required="required" title="The name of a unit, division, department, or group within an organization" />
+                        <input id="unit" type="text" autofocus="autofocus" value="{vcard:organization-unit}" required="required" title="The name of a unit, division, department, or group within an organization" class="form-control" />
                         <input id="legal" type="hidden" value="{gr:legalName}" />
                         <input id="label" type="hidden" value="{rdfs:label}" />
                         <input id="fn" type="hidden" value="{vcard:fn}" />
